# ejercicio_compiladores2

./: CMakeLists.txt  ast.h  easy_input.txt  ejerc.l  ejercisio.tc  expr_cfg.tc  parser.y
tests/: easy_input.txt
